--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fef7c0"
     android:orientation="vertical"
     tools:context=".MainActivity">
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="50dp"
-    android:text="Hello Coding"
+    android:text="Hi There"
+    android:textColor="#8b4513"
+    android:fontFamily="cursive"
     android:padding="5dp"
+    android:background="#fef7c0"
     android:id="@+id/intro"
     />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="40dp"
+        android:padding="5dp"
+        android:fontFamily="cursive"
         android:hint="name:"
         android:id="@+id/screen1"
+        android:textColor="#8b4513"
+        android:background="#fef7c0"
         />
-    <Button
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Press Here"
+        android:text="NEXT"
         android:id="@+id/button"
+        android:layout_marginTop="120dp"
         android:layout_gravity="center"
-        android:textColor="#ffffff"
+        android:textColor="#fef7c0"
+        android:textSize="30dp"
+        android:background="#cd853f"
+        />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:src="@drawable/hello2"
+        android:background="#fef7c0"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fef7c0"
         />
 
 
